<add> 개인정보수정

--- a/GimalProject/app/src/main/AndroidManifest.xml
+++ b/GimalProject/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GimalProject">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +23,9 @@
 
         </activity>
         <activity android:name=".Prime" android:label="pr">
+
+        </activity>
+        <activity android:name=".MyPage" android:label="my">
 
         </activity>
     </application>
