<add> 자가진단문진표

--- a/GimalProject/app/src/main/AndroidManifest.xml
+++ b/GimalProject/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity android:name=".MyPage" android:label="my">
 
         </activity>
+        <activity android:name=".SelfCheck" android:label="sc">
+
+        </activity>
     </application>
 
 </manifest>
